# consolidate-csvs

./: .gitignore  README.md  app.py  main.py  pyproject.toml  taskfile.yml
.claude/: CLAUDE.md  settings.local.json
tests/: conftest.py  test_app.py  test_main.py
