[project]
name = "consolidate-csvs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.24.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=9.0.2",
    "pytest-watcher>=0.6.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--random-order -s"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
